--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:client-crud": "node dist/client-crud/server/server.mjs"
+    "serve:ssr:client-crud": "node dist/client-crud/server/server.mjs",
+    "db": "json-server --watch db\\db.json"
   },
   "private": true,
   "dependencies": {
@@ -33,12 +34,16 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "autoprefixer": "^10.4.16",
     "jasmine-core": "~5.1.0",
+    "json-server": "^1.0.0-alpha.9",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
     "typescript": "~5.2.2"
   }
 }
